--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <div class="mb-8 border-b border-gray-200 pb-4">
             <h1 class="text-xl font-semibold tracking-tight text-gray-900 flex items-center gap-2">
                 <span class="material-symbols-outlined text-gray-500">grid_view</span>
-                Panel de Aplicaciones
+                Panel de Apps
             </h1>
         </div>
 
